# nursearch

./: .gitignore  Cargo.toml  LICENSE  README.md  nursearch.desktop
.github/workflows/: aur-release.yml  ci.yml
crates/nursearch/: Cargo.toml
crates/nursearch-plugin/: Cargo.toml
crates/nursearch-plugin/src/: lib.rs
crates/nursearch-pm/: Cargo.toml
crates/nursearch-pm/src/: main.rs
crates/nursearch-proto/: Cargo.toml
crates/nursearch-proto/src/: lib.rs
crates/nursearch/src/: calc.rs  config.rs  db.rs  desktop.rs  i18n.rs  launch.rs  main.rs  rank.rs  search.rs  style.css  system.rs  view.rs
crates/nursearch/src/plugin/: host.rs  manifest.rs  mod.rs  process.rs
docs/: AGENTS-PLUGIN-GUIDE.md  PLUGINS.md  plugin-manifest.schema.json
docs/superpowers/specs/: 2026-06-16-plugin-platform-design.md
packaging/aur/: PKGBUILD
plugins/clipboard/: Cargo.toml  nursearch-plugin.toml
plugins/clipboard/src/: main.rs
plugins/demo/: Cargo.toml  nursearch-plugin.toml
plugins/demo/src/: main.rs
plugins/emoji/: Cargo.toml  nursearch-plugin.toml
plugins/emoji/src/: main.rs
plugins/files/: Cargo.toml  nursearch-plugin.toml
plugins/files/src/: main.rs
plugins/web/: Cargo.toml  nursearch-plugin.toml
plugins/web/src/: main.rs
plugins/windows/: Cargo.toml  nursearch-plugin.toml
plugins/windows/src/: main.rs
src/: db.rs  desktop.rs  launch.rs  main.rs  rank.rs
templates/python-plugin/: main.py  nursearch-plugin.toml
templates/rust-plugin/: Cargo.toml  nursearch-plugin.toml
templates/rust-plugin/src/: main.rs
