[workspace]
resolver = "2"
members = [
    "crates/nursearch",
    "crates/nursearch-proto",
    "crates/nursearch-plugin",
    "crates/nursearch-pm",
    "plugins/demo",
    "plugins/clipboard",
    "plugins/emoji",
    "plugins/web",
    "plugins/files",
    "plugins/windows",
]
default-members = ["crates/nursearch"]
exclude = ["templates"]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
nursearch-proto = { path = "crates/nursearch-proto" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
